<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="top"
              android:orientation="vertical"
    android:paddingBottom="@dimen/space_between_sections">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_length" />

        <TextView
            android:id="@+id/length"
            style="@style/GridLayoutDataTextViewMonospace" />

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_as_utf8" />

        <TextView
            android:id="@+id/data_as_string"
            style="@style/GridLayoutDataTextViewMonospace"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_as_characters" />

        <TextView
            android:id="@+id/data_as_characters"
            style="@style/GridLayoutDataTextViewMonospace" />

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_as_array"/>

        <TextView
            android:id="@+id/data_as_array"
            style="@style/GridLayoutDataTextViewMonospace"/>
    </GridLayout>

</LinearLayout>