<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="top"
              android:orientation="horizontal">

    <ImageView
        android:id="@+id/device_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_bluetooth"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_mac"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:typeface="monospace"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_updated"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/device_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_rssi"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/device_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>
        </GridLayout>

        <GridLayout
            android:id="@+id/ibeacon_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:columnCount="4">

            <!-- ROW 1 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_uuid"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <!-- ROW 2 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_major"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_minor"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <!-- ROW 3 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_tx_power"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_tx_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_distance"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <!-- ROW 4 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_decriptor"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_distance_descriptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:paddingRight="5dp"
                android:textSize="12sp"/>
        </GridLayout>
    </LinearLayout>

</LinearLayout>